# linux

./: .gitignore  README.md  README.md.gpg  _adguard.list  adguard.list  arch.sh  config_arch.sh  cpu_temp_monitor.sh  crlf_lf.sh  css.txt  delete.py  delete_jpg.sh  encrypt.sh  first_config_arch.sh  git_config.sh  install_arch.sh  make_nfo.py  mp4_to_webm.py  ohmyzsh.sh  pikpakmount.py  remux_faststart_mp4.py  rename.py  requirements.txt  sbctl.sh  shutdown.py  sing-box.md  txt.py  ublacklist.list  ublock.list  update.py  update_json.py  update_json.pyw  update_yaml.py  update_yaml.pyw  video_create_poster.py  vim_copilot.sh  zen-browser.profile  zh-hans.json
Arch/dwm_huai/: .aliases
Arch/etc/: environment  vconsole.conf
arch/: arch.sh  config_arch.sh  first.sh  git.sh  init.sh  install.sh  install_arch.sh  nas.sh
bak/: autostart.sh  cpu_temp_monitor.sh  crlf_lf.sh  delete_jpg.sh  encrypt.sh  sing-box.md  swww_auto.sh  ufw.sh  video_create_poster.py  zen-browser.local  zen-browser.profile
bak/free/clash/: app.py  openwrt.yaml  pyproject.toml
bot/: Dockerfile  app.py  env  ha.py  main.py  pyproject.toml  requirements.txt
cloud/: init.sh
convert/: .dockerignore  0node.json  0node.yaml  Dockerfile  app.py  clash.py  config.py  core_clash.py  core_singbox.py  main.py  parsers.py  pyproject.toml  requirements.txt  singbox.py  utils.py
convert/json/: m.json  mtun.json  openwrt.json  pc.json
convert/yaml/: m.yaml  mtun.yaml  openwrt.yaml  pc.yaml
debian/: README.md  init.sh  install.md  note.md  新建文本文档.txt
firefox/: README.md  user.js
free/: README.md  download_yaml.sh
free/clash/: .env  Dockerfile  app.py  app_base64.py  b.yaml  b_json.yaml  b_shouji.yaml  b_yaml.yaml  hy2.py  hysteria2_converter.py  m.yaml  mtun.yaml  openwrt.yaml  pc.yaml  pyproject.toml  requirements.txt  ss.py  ss_converter.py  start.sh  trojan.py  vless.py  vless_converter.py
free/convert/: 0node.json  0node.yaml  app.py  clash.py  m.json  m.yaml  mtun.json  mtun.yaml  openwrt.json  openwrt.yaml  pc.json  pc.yaml  pyproject.toml  singbox.py
free/convert/json/: m.json  mtun.json  openwrt.json  pc.json
free/convert/yaml/: m.yaml  mtun.yaml  openwrt.yaml  pc.yaml
free/sing-box/: 1.11.json  1.12.json  1.12_fake-ip.json  Dockerfile  app.py  config-sing-box-1.12.0.json  hysteria2_converter.py  m.json  openwrt.json  pc.json  pyproject.toml  requirements.txt  start.sh  vless_converter.py
list/: README.md  ublock.list
nas/: README.md  cert.sh  exports  init.sh  nas.sh  nfs.conf  smb.conf  ufw.sh  update.sh
numlock/: numlock  numlock.sh
openwrt/: resize_openwrt.txt  stow.sh
rule-set/: README.md  classical_domain.py  convert-ruleset.py
shutdown/: .dockerignore  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
termux/: .bashrc
tg_bot/huai12138_bot/: Dockerfile  app.py  env  ha.py  pyproject.toml
tg_bot/mconline_bot/: Dockerfile  app.py  env  pyproject.toml
txt/: pyproject.toml  requirements.txt  txt.py  txt_to_epub.py
video/: 1+2.py  hevc_h264.py  mp4_h264.py  mp4_h264_1080p.py  mp4_to_webm.py  remix.py  rename.py
void/: README.md  init.sh
vyos/: README.md  note.md  tproxy.sh
wayland_dotfiles/: .aliases  .vimrc
win/: .bash_profile  .bashrc  .zshrc  Nas-Mount.py  PikPak-Mount.py  clean.py  clean.reg  codium_setting.json  config-update.py  delete.py  git.sh  minecraft.py  mount-pikpak.py  pikpakmount.py  rclone.bat  shutdown.py  update_json.py  update_yaml.py  update_yaml.pyw
www/: Dockerfile  app.py  pyproject.toml
(+511 files in other folders)
