[project]
name = "clash-convert"
version = "1.0.0"
description = "Default template for PDM package"
dependencies = [
    "Flask==3.1.2",
    "ruamel-yaml==0.18.15",
    "Requests==2.32.5",
    "PyYAML==6.0.2",
    "filelock==3.19.1",
    "python-dotenv>=1.2.1",
    "urllib3==2.5.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
