[project]
name = "sing-box"
version = "1.0.0"
description = "Default template for PDM package"

dependencies = [
    "Flask==3.1.2",
    "requests==2.32.5",
    "python-dotenv==1.1.1",
    "urllib3==2.5.0",
    "pathlib==1.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
