[project]
name = "huai12138_bot"
version = "1.0.0"
description = "Default template for PDM package"
dependencies = [
    "httpx==0.28.1",
    "python-dotenv==1.1.1",
    "python-telegram-bot==22.3",
    "python-telegram-bot[webhooks]",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
