[project]
name = "mconline"
version = "1.0.0"
description = "Default template for PDM package"
dependencies = [
    "Flask==3.1.2",
    "requests==2.32.5",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "filelock==3.19.1",
    "beautifulsoup4==4.13.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
